# rules_cem

./: .gitattributes  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: release.yml  release_prep.sh
cem/: BUILD.bazel  extensions.bzl  repositories.bzl  toolchain.bzl
cem/private/: BUILD.bazel  resolved_toolchain.bzl  toolchains_repo.bzl
cem/tests/: versions_test.bzl
docs/: BUILD.bazel
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
