# Override http_archive for local testing
local_repository(
    name = "com_claydiffrient_rules_cem",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_cem setup #
######################
# Fetches the rules_cem dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@com_claydiffrient_rules_cem//cem:repositories.bzl", "rules_cem_dependencies")

rules_cem_dependencies()
